frontend/src/styles/components/gamecards.scss
.center-cards {
  padding-top: $edge-padding;
}

.pagination {
  padding-top: $edge-padding;
  justify-content: center;
}

ul.react-paginate {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  list-style-type: none;
  user-select: none;
  padding-left: 0px;
}

ul.react-paginate li a {
  border-radius: 3px;
  padding: 0.1rem 0.5rem;
  border: gray 1px solid;
  cursor: pointer;
}

ul.react-paginate li.previous a,
ul.react-paginate li.next a,
ul.react-paginate li.break a {
  border-color: transparent;
  text-decoration: none;
  user-select: none;
}

ul.react-paginate li.selected a {
  background-color: $teal;
  border-color: transparent;
  color: white;
  min-width: 32px;
}

ul.react-paginate li.disabled a {
  color: grey;
}

ul.react-paginate li.disable,
ul.react-paginate li.disabled a {
  cursor: default;
}

@include media-breakpoint-up(md) {
  .game-card-display-collection {
    height: calc(100vh - 210px);

    .card-col {
      height: 33%;
    }
  }

  .game-card-display {
    height: calc(100vh - 478px);

    .card-col {
      height: 50%;
    }
  }
}

